[package]
name = "lf-shardedringbuf"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-utils = "0.8.21"
fastrand = "2.3.0"
kanal = "0.1.1"
thread_local = "1.1.9"
tokio = {version = "1.45.1", features = ["full"] }

[dev-dependencies]
criterion = {version = "0.6.0", features =["async_tokio", "async_futures"] }

[[bench]]
name = "rb_benchmarks"
harness = false
