[package]
name = "lf-shardedringbuf"
version = "0.1.12"
edition = "2024"
rust-version="1.87.0"
description = """
An async, lock-free, sharded, cache-aware SPSC/MPSC/MPMC ring buffer in Rust.
"""
authors= ["Mahdi Ali-Raihan mma2268@columbia.edu"]
license = "MIT"
keywords = ["sharding", "async", "ring-buffer", "mpmc", "spsc"]
categories = ["concurrency"]
readme = "README.md"
repository = "https://github.com/asder8215/lf-shardedringbuf"
homepage = "https://github.com/asder8215/lf-shardedringbuf"
documentation = "https://docs.rs/lf-shardedringbuf/latest/lf_shardedringbuf/"

[dependencies]
crossbeam-utils = "^0.8.21"
fastrand = "^2.3.0"
tokio = {version = "^1.45.1", features = ["rt"] }

[dev-dependencies]
criterion = {version = "^0.6.0", features =["async_tokio"] }
tokio = {version = "^1.45.1", features = ["sync", "macros", "rt-multi-thread"] }
kanal = "^0.1.1"

[[bench]]
name = "rb_benchmarks"
harness = false
