[package]
name = "sharded_ringbuf"
version = "0.4.4"
edition = "2024"
rust-version="1.87.0"
description = """
A Tokio async, sharded SPSC/MPSC/MPMC ring buffer in Rust.
"""
authors= ["Mahdi Ali-Raihan mma2268@columbia.edu"]
license = "MIT"
keywords = ["sharding", "async", "ring-buffer", "mpmc", "spsc"]
categories = ["concurrency"]
readme = "README.md"
repository = "https://github.com/asder8215/sharded_ringbuf"
homepage = "https://github.com/asder8215/sharded_ringbuf"
documentation = "https://docs.rs/sharded_ringbuf/latest/sharded_ringbuf/"

[dependencies]
crossbeam-utils = "^0.8.21"
fastrand = {version = "^2.3.0", optional = true}
tokio = {version = "^1.45.1", features = ["sync"] }
futures-util = {version = "^0.3.31", optional = true}

[features]
cs_srb = []
srb = []
mlf_srb = []
exp_srb = ["fastrand", "futures-util"]
default = ["srb", "mlf_srb", "cs_srb",]
all = ["srb", "mlf_srb", "cs_srb",]

[dev-dependencies]
criterion = {version = "^0.6.0", features =["async_tokio"] }
tokio = {version = "^1.45.1", features = ["sync", "macros", "rt-multi-thread"] }
kanal = "^0.1.1"
async-channel = "2.5.0"
crossbeam = "0.8"
flume = {version="0.11", features= ["async"] }
smol = "2.0.2"

[[bench]]
name = "cs_srb"
harness = false

[[bench]]
name = "srb"
harness = false

[[bench]]
name = "flume"
harness = false

[[bench]]
name = "tokio"
harness = false

[[bench]]
name = "crossbeam"
harness = false

[[bench]]
name = "crossfire"
harness = false

[[bench]]
name = "kanal_async"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
